# Todo_CLI_Haskell

./: .gitignore  README.md  haskell-todo-manager.cabal
src/: Main.hs  Parser.hs  Storage.hs  Todo.hs
