cabal-version:      3.0
name:               haskell-todo-manager
version:            0.1.0.0
synopsis:           CLI todo manager for demonstrating functional programming in Haskell
description:        A small backend-style CLI application that manages todos with pure business logic and JSON persistence.
homepage:           https://example.com/haskell-todo-manager
bug-reports:        https://example.com/haskell-todo-manager/issues
license:            MIT
license-file:       LICENSE
author:             Portfolio Project
maintainer:         portfolio@example.com
category:           CLI
build-type:         Simple
extra-source-files: README.md

executable haskell-todo-manager
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Parser
        Storage
        Todo
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.14 && <5,
        aeson >=2.0 && <3,
        bytestring >=0.10 && <0.13,
        directory >=1.3 && <1.4,
        optparse-applicative >=0.17 && <0.19,
        text >=1.2 && <2.2
